--- a/port-forward.wxs
+++ b/port-forward.wxs
@@ -16,28 +16,17 @@
     <Property Id='DiskPrompt' Value="WSLポートフォワード設定 インストーラ [1]" />
 
     <Directory Id='TARGETDIR' Name='SourceDir'>
-     <Directory Id='ProgramFilesFolder' Name='PFiles'>
-        <Directory Id='ledsun' Name='ledsun'>
-          <Directory Id='INSTALLDIR' Name='port-forward'>
-
-            <Component Id='PortForwardOn'
-                       Guid='{E2558918-C7AC-42AA-AA82-C318B53D1202}'>
-              <File Id='ON'
-                    Name='port-forward-on.bat' DiskId='1'
-                    Source='port-forward-on.bat' >
-                <Shortcut Id="startmenuon" Directory="DesktopFolder"
-                          Name="WSLポートフォワード設定 ON" WorkingDirectory='INSTALLDIR' />
-              </File>
-              <RegistryValue Root='HKCU'
-                              Key='Software\[Manufacturer]\[ProductName]\PortForwardOn'
-                              Type='string' Value='' KeyPath='yes' />
-            </Component>
-
-          </Directory>
-        </Directory>
+      <Directory Id="DesktopFolder" Name="Desktop">
+        <Component Id='PortForwardOn'
+                   Guid='{E2558918-C7AC-42AA-AA82-C318B53D1202}'>
+          <File Id='ON'
+                Name='port-forward-on.bat' DiskId='1'
+                Source='port-forward-on.bat' />
+          <RegistryValue Root='HKCU'
+                          Key='Software\[Manufacturer]\[ProductName]\PortForwardOn'
+                          Type='string' Value='' KeyPath='yes' />
+        </Component>
       </Directory>
-
-      <Directory Id="DesktopFolder" Name="Desktop" />
     </Directory>
 
     <Feature Id='Complete' Level='1'>
